--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@sanity/client": "^3.4.1",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-dotenv": "^3.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
