--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "groq": "^2.33.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
