--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,17 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
     "@sanity/client": "^3.4.1",
-    "@sanity/image-url": "^1.0.1",
+    "@types/react-native-vector-icons": "^6.4.12",
     "groq": "^2.33.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-dotenv": "^3.4.6"
+    "react-native-dotenv": "^3.4.6",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
