--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
     "@sanity/client": "^3.4.1",
     "@types/react-native-vector-icons": "^6.4.12",
     "groq": "^2.33.2",
@@ -23,10 +24,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2",
-    "reselect": "^4.1.7"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -36,10 +34,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
-    "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
