--- a/client/package.json
+++ b/client/package.json
@@ -16,15 +16,18 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@sanity/client": "^3.4.1",
     "@types/react-native-vector-icons": "^6.4.12",
+    "@types/uuid": "^9.0.0",
     "groq": "^2.33.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-dotenv": "^3.4.6",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^5.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
